styles/main.less
/* http://paletton.com/#uid=50F0x0klllllmrhmnfHqXpBqrjx */

@color-primary-0: #AA7739;	/* Main Primary color */
@color-primary-1: #D99848;
@color-primary-2: #7D5626;
@color-primary-3: #CC7F20;
@color-primary-4: #9C621B;

@color-secondary-1-0: #AA8E39;	/* Main Secondary color (1) */
@color-secondary-1-1: #D9B548;
@color-secondary-1-2: #7D6726;
@color-secondary-1-3: #CCA120;
@color-secondary-1-4: #9C7B1B;

@color-secondary-2-0: #AA4E39;	/* Main Secondary color (2) */
@color-secondary-2-1: #D96448;
@color-secondary-2-2: #7D3626;
@color-secondary-2-3: #CC4120;
@color-secondary-2-4: #9C341B;


body {
    height: 100%;
    width: 100%;
    margin: 0;
    overflow: hidden;
    position: relative;
    font-family: sans-serif;
    background-color: #333;
    font-size: 12px;

    cursor: default;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body .stats {
    background-color: @color-primary-0;
    font-size: 10px;
    height: 100%;

    float: left;
    top: 0;
    left: 0;
    width: 400px;

    table {
        width: 200px;
        float: left;
    }
}

.itemTab {
    background-color: @color-primary-0;
    width: 405px;
    margin: 0 10px;
    float: right;
    height: 100%;
    overflow: auto;
    font-size: 10px;

    .container {
        width: 405px;
        overflow: auto;

        .header {
            width: 393px;
            border: 1px solid #112;
            border-radius: 3px;
            margin: 10px 5px 5px 5px;
            font-weight: bold;
            text-align: center;
        }

        .itemSlot {
            border: 1px solid #224;
            border-radius: 3px;
            margin: 5px 0 0 5px;
            width: 73px;
            height: 73px;
            float: left;
            cursor: pointer;

            > div {
                margin: 2px 2px;
            }
        }

        .itemSlot.selected {
            background-color: @color-secondary-2-0;
        }

        .itemSlot.disabled {
            background-color: @color-secondary-2-1;
        }
    }
}

.infoBox {
    background-color: @color-primary-0;
    width: 200px;
    height: 300px;
    margin: 10px;
    padding: 5px;
    float: right;
    display: none;
    border: 1px solid black;
}

.footer {
    position: absolute;
    left: 0;
    height: 150px;
    background-color: @color-secondary-1-0;
    border-top: 5px solid @color-secondary-1-2;

    .hero {
        float: left;
        font-size: 16px;
        height: 140px;
        margin: 5px;
    }

    .skillchain {
        float: left;
        height: 140px;
        margin: 5px;

        .skill {
            float: left;
            margin-top: 25px;
            margin-left: 10px;
            width: 90px;
            height: 110px;
            border-radius: 5px;

            .box {
                position: relative;
                height: 90px;
                width: 90px;
                border-radius: 5px;
                overflow: hidden;

                img {
                    position: absolute;
                    top: 0;
                    left: 0;
                }

                .cooldown {
                    background-color: @color-secondary-2-2;
                    opacity: 0.5;
                    position: absolute;
                    bottom: 0;
                    height: 0;
                    width: 100%;
                }
            }

            .use-holder {
                position: relative;
                height: 10px;
                width: 90px;
                overflow: hidden;
                margin-top: 5px;

                .use-bar {
                    position: absolute;
                    left: 0;
                    top: 0;
                    width: 0;
                    height: 100%;
                    background-color: #333;
                }
            }
        }
    }

    .zone {
        float: left;
        height: 140px;
        margin: 5px;
        font-size: 16px;
    }

    .buttons {
        font-size: 16px;
        float: right;
        /* full size, margins handled in buttons */
        height: 150px;
        width: 150px;

        /*
          150 px size:
          5 px margin
          2 px border
          div
          2 px border
          5px margin
          2 px border
          div
          2px border
          5px margin
          */

        > div {
            background-color: @color-secondary-1-4;
            border-radius: 5px;
            border-top: 2px solid #333;
            border-left: 2px solid #333;
            border-right: 2px solid #111;
            border-bottom: 2px solid #111;
            margin: 5px 0 0 5px;

            float: left;
            height: 63px;  /* 4 border + 6 margin + 65 height = 150 / 2 */
            width: 63px;
            font-size: 18px;
            line-height: 63px;
            text-align: center;
        }
    }
}

.map {
    background-color: @color-primary-0;
    float: left;
    height: 100%;
    width: 380px;
    overflow: hidden;

    .zone {
        width: 360px;
        height: 50px;
        margin: 10px;
        font-size: 14px;
        line-height: 25px;

        img {
            margin-right: 5px;
            float: left;
            width: 50px;
            height: 50px;
        }
    }
    .zone:hover {
        background-color: @color-primary-1;
    }
    .zone.running {
        background-color: @color-secondary-1-1;
    }
}

.vis {
    position: absolute;
    left: 0;
    top: 0;
    overflow: hidden;
    z-index: -1;

    canvas {
        position: absolute;
        left: 0;
        top: 0;
    }

    .bg {
        z-index: -30;
    }

    .entity {
        z-index: -20;
    }

    .proj {
        z-index: -10;
    }
}

canvas.vis {
    border: 1px solid black;
}

.noselect {
    cursor: pointer;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.hidden {
    display: none;
}

